# onelab

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
examples/: demo.py
src/onelab/: __init__.py  podcast.py  schema.py  tts.py
